--- a/package.json
+++ b/package.json
@@ -32,23 +32,26 @@
     "access": "public"
   },
   "dependencies": {
-    "@filipgorny/service-api": ">=0.0.1",
     "@filipgorny/logger": ">=0.0.1",
+    "@filipgorny/service-api": ">=0.0.1",
     "axios": "^1.6.2"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.10.0",
+    "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^6.13.0",
     "@typescript-eslint/parser": "^6.13.0",
     "eslint": "^8.54.0",
     "jest": "^30.2.0",
     "nock": "^13.5.0",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.4.5",
     "typescript": "^5.3.2"
   },
   "peerDependencies": {
-    "@filipgorny/service-api": ">=0.0.1",
-    "@filipgorny/logger": ">=0.0.1"
+    "@filipgorny/logger": ">=0.0.1",
+    "@filipgorny/service-api": ">=0.0.1"
   },
   "files": [
     "dist",
